# circlify

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  circlify.py  dev-requirements.txt  pyproject.toml  setup.bat  setup.cfg  setup.py  test-requirements.txt  test_circlify.py  tests.py
.github/: dependabot.yml
.github/workflows/: coverage.yml  publish.yml  python-package.yml
pylint.d/: circlify1.stats  tests1.stats
