[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circlify"
version = "0.15.1"
description = "Circle packing algorithm for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Elmotec", email = "elmotec@gmx.com"}
]
keywords = ["circle", "packing", "enclosure", "hierarchy", "graph", "display", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "coverage>=5.3",
    "coveralls>=3.3.1",
    "ruff>=0.1.0",
    "hypothesis>=6.50.1",
]
develop = [
    "coverage>=5.3",
    "coveralls>=3.3.1",
    "ruff>=0.1.0",
    "hypothesis>=6.50.1",
    "commitizen>=2.28.0",
    "matplotlib>=3.5.2",
    "pre-commit>=2.19.0",
    "wheel>=0.37.1",
]

[project.urls]
Homepage = "http://github.com/elmotec/circlify"
Repository = "http://github.com/elmotec/circlify"

[tool.setuptools]
py-modules = ["circlify"]

[tool.setuptools.packages.find]
include = ["circlify*"]

[tool.wheel]
universal = false

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"test_circlify.py" = ["E501"]  # Allow long lines in tests

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.15.1"
tag_format = "v$version"
version_files = ["circlify.py:__version__", "pyproject.toml:version"]
